# vertex-rag-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  fastagent.secrets.yaml.example  pyproject.toml
src/vertex_rag_mcp/: __init__.py  server.py  vertex_rag_tool.py
